# PathOfBuilding-Python

./: .gitignore  CODE_STYLE.md  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  pyproject.toml
src/pob1/constants/: colors.py  flags.py  skill_types.py
src/pob1/models/parser/: conqueror_model.py  modifier_model.py  modifier_name_model.py
src/pob1/models/parser/tests/: test_modifier.py  test_modifier_name.py
