[tool.poetry]
name = "pathofbuilding-python"
version = "0.1.0"
description = "Modern Port of PoB to Python!"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.8.3"
requests = "^2.32.3"
polars = "^1.17.1"
pydantic = "^2.10.3"
pendulum = "^3.0.0"
jinja2 = "^3.1.4"
markupsafe = "^3.0.2"
httpx = "^0.28.1"
django = "^5.1.4"
django-htmx = "^1.21.0"
django-browser-reload = "^1.17.0"
whitenoise = "^6.8.2"
gunicorn = "^23.0.0"
django-extensions = "^3.2.3"
django-compressor = "^4.5.1"
django-environ = "^0.11.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-django = "^4.9.0"
pytest-cov = "^6.0.0"
mypy = "^1.13.0"
django-stubs = "^5.1.1"
django-debug-toolbar = "^4.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
