[project]
name = "pathofbuilding-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.4",
    "django-browser-reload>=1.17.0",
    "django-compressor>=4.5.1",
    "django-environ>=0.11.2",
    "django-extensions>=3.2.3",
    "django-htmx>=1.21.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.4",
    "markupsafe>=3.0.2",
    "pendulum>=3.0.0",
    "polars>=1.17.1",
    "pydantic>=2.10.4",
    "ruff>=0.8.4",
    "uvicorn>=0.34.0",
    "whitenoise>=6.8.2",
]

[project.optional-dependencies]
testing = [
    "pytest-django>=4.9.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "mypy>=1.14.0",
    "django-stubs>=5.1.1",
    "django-debug-toolbar>=4.4.6",
]


[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--import-mode=importlib"